--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.custom-container {
+  width: 85%;
+  margin: 0 auto;
+}
